--- a/practical-common-lisp.org
+++ b/practical-common-lisp.org
@@ -365,10 +365,10 @@ whereマクロを実際に使ってみよう！
 ** S式
 以下のどちらかのこと。
 - リスト
-  - カッコで括られている
+  - カッコで括られているもの
   - 空白で区切って、いくつでもS式を含められる
 - アトム
-  - リスト以外の、コメントをのぞいた全て。
+  - リスト以外のもの。ただし、コメントを除く
 ** アトムの種類
 - 数値
   - 整数、分数、浮動小数点数、複素数がある
@@ -379,7 +379,7 @@ whereマクロを実際に使ってみよう！
 - シンボル
   - ~FORMAT~ や ~hello-world~ や ~*db*~ といった、「名前」。
   - カッコやクォート類、カンマやコロン、バックスラッシュはエスケープすれば、シンボルの一部として使える
-  - リストの読み取り機は、エスケープされていないシンボルを、全て大文字に変換する。
+  - リストの読み取り器は、エスケープされていないシンボルを、全て大文字に変換する。
   - シンボルの命名規約
     - ハイフンがよく使われる
     - ダイナミック変数の先頭と末尾に ~*~ をつける
@@ -391,15 +391,14 @@ whereマクロを実際に使ってみよう！
   - 変数の名前とみなされ、その変数の現在の値として評価される。
 - それ以外
   - 自己評価型 (*self-evaluating*)のオブジェクト。
-  - 数値や文字列など、評価器に渡すとそれ自身が帰ってくるもののこと。
+  - 数値や文字列など、評価器に渡すとそれ自身が返ってくるもののこと。
 
 シンボルも、変数の名前に代入すれば自己評価型になる。
 ~T~ や ~NIL~ はこの形式で定義されている。
-キーワード引数で使われる **キーワードシンボル** ~:symbol~ も、同じく自己評価型になるシンボルで、
+キーワード引数で使われる *キーワードシンボル* ~:symbol~ も、同じく自己評価型になるシンボルで、
 その名前の定数が自動的に定義される。
 
-正規のリストフォームは、すべてシンボルで始まり、
-評価のされかたによって3種類に分けられる。
+正規のリストフォームは、すべてシンボルで始まり、評価のされかたによって3種類に分けられる。
 - 関数呼び出しフォーム
 - マクロフォーム
 - 特殊フォーム
@@ -411,7 +410,7 @@ whereマクロを実際に使ってみよう！
 #+begin_src lisp
   (if x (format t "yes") (format t "no"))
 #+end_src
-この問題を解決するため、Common Lispには関数ではできないことをするための **特殊オペレータ** が25個ある。
+この問題を解決するため、Common Lispには関数ではできないことをするための *特殊オペレータ* が25個ある。
 リストの先頭が特殊オペレータの名前だった場合、式の残りはその特殊オペレータのルールに従って評価される。
 ** マクロ
 ユーザに対して、Lispのシンタックスを拡張する手段を提供するのがマクロ。
